Hibernate properties added

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -8,7 +8,15 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+## Hibernate config
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 server.port=8084
+
+# Eureka config
+eureka.client.registerWithEureka=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.preferIpAddress=true
+
+# Spring config
+spring.application.name=user-service
+server.servlet.context-path=/users
