Table name changed

--- a/user-service/src/main/resources/db/changelog/changes/create-Member-table.yml
+++ b/user-service/src/main/resources/db/changelog/changes/create-Member-table.yml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: Maikel Sánchez
       changes:
         - createTable:
-            tableName: Member
+            tableName: member
             columns:
               - column:
                   name: id
