--- a/user-service/src/main/resources/db/changelog/changes/create-User-table.yml
+++ b/user-service/src/main/resources/db/changelog/changes/create-User-table.yml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: Maikel Sánchez
       changes:
         - createTable:
-            tableName: User
+            tableName: user
             columns:
               - column:
                   name: id
