--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 spring.liquibase.enabled=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/user_service_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/users_service?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=root_password
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
