--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 spring.liquibase.enabled=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/users_service?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root_password
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/users_service?createDatabaseIfNotExist=true}
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD:root_password}
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=${SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${SHOW_SQL:false}
 
 ## Hibernate config
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
