--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,14 +1,22 @@
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 spring.liquibase.enabled=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/user_service_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/users_service?createDatabaseIfNotExist=true}
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD:root_password}
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=${SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${SHOW_SQL:false}
 
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+## Hibernate config
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 server.port=8084
+
+# Eureka config
+eureka.client.registerWithEureka=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.preferIpAddress=true
+
+# Spring config
+spring.application.name=user-service
+server.servlet.context-path=/users
